<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.example.mohammadibrahim.phone_dialer.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/firstlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="none" />

            <Button
                android:id="@+id/buttondelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/X"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="onDelete"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="one"/>

            <Button
                android:id="@+id/buttontwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="two"/>

            <Button
                android:id="@+id/buttonthree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="three"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonfour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="four"/>

            <Button
                android:id="@+id/buttonfive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="five"/>

            <Button
                android:id="@+id/buttonsix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="six"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourthlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonseven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="seven"/>

            <Button
                android:id="@+id/buttoneight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="eight"/>

            <Button
                android:id="@+id/buttonnine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="nine"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifthlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonstar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/star"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="star"/>

            <Button
                android:id="@+id/buttonzero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="zero"/>

            <Button
                android:id="@+id/buttonhash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hashTag"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="hashTag"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sixthlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttondial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/dial"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:onClick="dial"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
